clang/test/BSC/Negative/NullabilityCheck/check_zone/safe_zone_check.cbs
// RUN: %clang_cc1 -verify %s

_Safe void check_dereferenced_test1(void) {
  int *_Borrow _Nullable p = nullptr;
  {
    *p = 10; // expected-error {{nullable pointer cannot be dereferenced}}
    _Unsafe {
      int a = 2;
      *p = a;
      _Safe *p = a; // expected-error {{nullable pointer cannot be dereferenced}}
    }
  }
  *p = 5;         // expected-error {{nullable pointer cannot be dereferenced}}
  _Unsafe *p = 5;  // ok
}
void check_dereferenced_test2() {
  int *_Borrow _Nullable p = nullptr;
  if (p != nullptr) {
    *p = 5;
  }
  *p = 10;
}

void check_dereferenced_test3() {
  _Safe {
    int *_Borrow _Nullable p = nullptr;
    _Unsafe {
      *p = 5;
      _Safe {
        if (p != nullptr) {
          *p = 10;
        }
        *p = 15; // expected-error {{nullable pointer cannot be dereferenced}}
      }
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
  }
}

void check_dereferenced_test4() {
  int *_Borrow _Nullable p = nullptr;
  if (p != nullptr) {
    _Safe *p = 5;
  }
  _Safe *p = 10;            // expected-error {{nullable pointer cannot be dereferenced}}
}

void check_dereferenced_test5<T>() {
  _Safe {
    int *_Borrow _Nullable p = nullptr;
    _Unsafe {
      *p = 5;
      _Safe {
        if (p != nullptr) {
          *p = 10;
        }
        *p = 15; // expected-error {{nullable pointer cannot be dereferenced}}
      }
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
  }
}

void check_dereferenced_test6<T>() {
  int *_Borrow _Nullable p = nullptr;
  if (p != nullptr) {
    _Safe *p = 5;
  }
  _Safe *p = 10;            // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void check_assigned_test(void) {
  int *_Borrow p = nullptr; // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
  _Unsafe {
    int *_Borrow p2 = nullptr;
  }
}

_Safe int* _Borrow _Nonnull check_returned_test(int *_Borrow _Nonnull ptr ) {
  int *_Borrow _Nullable p = nullptr;
  return p; // expected-error {{cannot return nullable pointer type}}
}

_Safe void check_param_pass_test(int *_Borrow ptr) {
  int *_Borrow _Nullable p = nullptr;
  int *_Borrow p2 = check_returned_test(p); // expected-error {{cannot pass nullable pointer argument}}
  _Unsafe {
    int *_Borrow p3 = check_returned_test(p);
  }
}

int main() {
  check_dereferenced_test5<int>();    // expected-note {{in instantiation of function template specialization 'check_dereferenced_test5<int>' requested here}}
  check_dereferenced_test6<int>();    // expected-note {{in instantiation of function template specialization 'check_dereferenced_test6<int>' requested here}}
}